[package]
name = "celling"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = {version = "0.12.1", features = ["dynamic_linking"]}
bevy-inspector-egui = "0.22.1"
bevy_framepace = "0.14.1"
bevy_rapier2d = "0.24.0"
rand = "0.8.5"
marching_squares = {path = "../marching_squares"}
delaunator = "1.0.2"
earcutr = "0.4.3"

[[example]]
name = "celling_test1"
path = "examples/celling_test1.rs"

[features]
debug=[]

[target.x86_64-pc-windows-msvc]
linker = "lld-link.exe"
rustflags = ["-Clinker=lld", "-Zshare-generics=off"]


